--- a/research leadership/leadership.tex
+++ b/research leadership/leadership.tex
@@ -15,14 +15,14 @@
 \end{center}
 
 
-\subsection*{1.~~~Research areas and track record}
+\subsection*{1.~~~Research topics and track record}
 
 My work on data science spans a career of over 20 years, 
 which includes numerous contributions in algorithmic data-analysis research, 
 and consolidates experience from academia and industry.
 I have been in academia since 2013 
-(2013 to 2019 in Aalto University and 2020 to present in KTH), 
-and prior to that I was a senior research scientist in Yahoo!\ Research Labs. 
+(2013 to 2019 in Aalto University and 2020 to present in KTH).
+Prior to that I was a senior research scientist in Yahoo!\ Research Labs. 
 
 The main focus of my work has been in data mining and algorithmic data analysis. 
 My approach and philosophy to research is driven by considering practical problems 
@@ -33,51 +33,53 @@ and developing novel and theoretically-rigorous solutions.
 Over the years I have published over 60 journal and over 170 conference publications, 
 in peer-reviewed top-tier international journals and conferences.
 Many of my publications have attracted significant attention in the community
-and have generated a volume of follow-up research works.
+and have generated a volume of follow-up works.
 The areas that I have made significant contributions and 
 have published highly-cited papers include the following: 
 \squishlist
 \item[--~] similarity search in high dimensional spaces; 
 \item[--~] significance testing for data mining results; 
-\item[--~] graph mining: efficient computation of graph motifs, discovery of dense subgraphs, community detection, role mining, network inference, etc.	
-\item[--~] social-network and social-media analysis
-\item[--~] analysis of temporal networks and information-diffusion in networks
-\item[--~] analysis of urban data
-\item[--~] data clustering
-\item[--~] interpretable models for machine learning
+\item[--~] graph mining: efficient computation of graph motifs, discovery of dense subgraphs, community detection, role mining, network inference, etc.;
+\item[--~] social-network and social-media analysis;
+\item[--~] analysis of temporal networks and information-diffusion in networks;
+\item[--~] analysis of urban data;
+\item[--~] data clustering;
+\item[--~] interpretable models for machine learning.
 \squishend
 
-My papers have received one test-of-time award, 
-four best paper awards, 
-and four best student paper awards, co-authored by students under my supervision. 
+My publications have received \emph{1 test-of-time award}, 
+\emph{4 best-paper awards}, 
+and \emph{4 best-student paper awards}, co-authored by students under my supervision. 
 
 
 \subsection*{2.~~~Research supervision}
 
 I am proud of the doctoral students and postdocs that I have supervised over the years. 
-I want to believe that I have inspired them with an example for hard work and hands-on style of research, 
-as well as by always treating them as peers. \\
-In Aalto I have supervised (as main supervisor) 10 doctoral students and 8 postdocs, graduated. \\
-In KTH I have supervised (as main supervisor) 1 doctoral student and 2 postdocs, graduated. \\
+I want to believe that I have inspired them by being example for hard work,
+hands-on style of research, 
+high standards of quality and academic integrity, 
+and always treating them as peers. \\
+In Aalto I have supervised (as main supervisor) 10 doctoral students and 8 postdocs, all graduated. \\
+In KTH I have supervised (as main supervisor) 1 doctoral student and 2 postdocs, all graduated. \\
 Currently, in KTH I am supervising (as main supervisor) 6 doctoral students and 5 postdocs. \\
 Some examples of the current positions of the doctoral students and postdocs that I have supervised are the following:
 \squishlist
-\item[--~] Eric Malmi, PhD student, 2018,\footnote{The year graduation year.} Google
-\item[--~] Sanja Scepanovic, PhD student, 2018, Nokia Labs 
-\item[--~] Kiran Garimella, PhD student, 2018, assistant professor in Rutgers University
-\item[--~] Polina Rozenshtein, PhD student, 2019, Amazon 
-\item[--~] Suhas Thejaswi, PhD student, 2022, postdoc in MPI
-\item[--~] Nikolaj Tatti, postdoc, 2017, associate professor in the University of Helsinki
-\item[--~] Michael Mathioudakis,  postdoc, 2017, associate professor in the University of Helsinki
-\item[--~] Stefan Neumann, postdoc, 2023, assistant professor in TU Vienna
+\item[--~] Eric Malmi, PhD student, 2018,\footnote{The year graduation year.} Google.
+\item[--~] Sanja Scepanovic, PhD student, 2018, Bell Labs.
+\item[--~] Kiran Garimella, PhD student, 2018, assistant professor in Rutgers University.
+\item[--~] Polina Rozenshtein, PhD student, 2019, Amazon.
+\item[--~] Suhas Thejaswi, PhD student, 2022, postdoc in MPI.
+\item[--~] Nikolaj Tatti, postdoc, 2017, associate professor in the University of Helsinki.
+\item[--~] Michael Mathioudakis,  postdoc, 2017, associate professor in the University of Helsinki.
+\item[--~] Stefan Neumann, postdoc, 2023, assistant professor in TU Vienna.
 \squishend
 
 \subsection*{3.~~~International recognition}
 
 My recognition from the international research community is reflected 
 in my participation in the editorial board of two high-impact journals: 
-ACM Transaction on the Web (TWEB), and Data Mining and Knowledge Discovery (DMKD) journal. 
-I have consistently participated as senior PC member or area chair in 
+ACM Transaction on the Web (TWEB), and Data Mining and Knowledge Discovery (DMKD). 
+I have consistently participated as a senior PC member or area chair in 
 most major conferences in data discovery and knowledge management in the last 10, or more, years.
 Additionally, I have been a program co-chair of the following conferences:
 ECML PKDD 2010, ACM WSDM 2013, the Web Conference 2022, and ACM WSDM 2024. 
