--- a/research plan/plan.tex
+++ b/research plan/plan.tex
@@ -576,9 +576,11 @@ Describe also any crucial risks or obstacles that may impact on the implementati
 and your plan for managing these.}
 
 \para{Time planning.}
-The project will employ three doctoral students (PhD1, PhD2, PhD3) for five years each 
-(working 80\% in research and 20\% as teaching assistants, as it is typical in KTH), 
-and three postdoctoral researchers (PostD1, PostD2, PostD3) for two years each. 
+The project will employ 3 doctoral students (PhD1, PhD2, PhD3) for 5 years each 
+(working 80\% in research and 20\% as teaching assistants), 
+and 3 postdocs (PostD1, PostD2, PostD3) for 2 years each. 
+%
+One postdoc will be funded by the WASP package of the PI. All other personnel will be funded by this VR grant.
 %
 % The doctoral students will be recruited on years 1, 2, and 3 of the project, 
 % and the postdocs will be recruited on years 2, 3, and 4. 
